--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <h1> World Sustainability Dataset </h1>
-
+    <svg width=300 height=300>
+    </svg>
     <body>
         <div id="chart"></div>
       
