--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           const data = d3.csv('WorldSustainabilityDataset.csv', d3.autoType);
          // d3.csv("WorldSustainabilityDataset.csv").then(function(data) {
             // Convert numerical values from strings to numbers
-          const dataArray = Array.from(data, ([key,value]) => value);
+          const dataArray = Object.values(data);
+            //const dataArray = Array.from(data, ([key,value]) => value);
           dataArray.sort((a,b) => d3.descending(a["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"], b["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"]));
           console.log(dataArray);
           console.log(data);
