--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
       // Generate random data within the specified ranges
       //var numDataPoints = 50;
       var CO2damage = dataArrayF.map(d => +d["Adjusted savings: carbon dioxide damage (% of GNI) - NY.ADJ.DCO2.GN.ZS"]);
-      var xs = d3.scaleLinear().domain([0, 10]).range([0, width]);
+      var xs = d3.scaleLinear().domain([0, 3]).range([0, width]);
 
       // Adjust the y-scale domain based on the actual data values for "Access to electricity"
       var electricity = dataArrayF.map(d => +d["GDP per capita (current US$) - NY.GDP.PCAP.CD"]);
@@ -40,21 +40,14 @@
       var ys = d3.scaleLinear().domain([yDomain[0] - 5, yDomain[1] + 5]).range([height, 0]);
 
       var population = dataArrayF.map(d => +d["Population, total - SP.POP.TOTL"]);
-      var rs = d3.scaleLinear().domain([0, d3.max(population)]).range([0, 30]);
-/*
-      //tooltip
-      var Tooltip = d3.select("#chart")
-    .append("div")
-    .style("opacity", 0)
-    .attr("class", "tooltip")
-    .style("background-color", "white")
-    .style("border", "solid")
-    .style("border-width", "2px")
-    .style("border-radius", "5px")
-    .style("padding", "5px")
-*/
+      var rs = d3.scaleLinear().domain([0, d3.max(population)]).range([5, 70]);
+
+
+
     var tooltip = d3.select("body")
     .append("div")
+   // .style("opacity", 0)
+    //.attr("class", "tooltip")
     //.html(d)
     //.style("left", d3.select(this).attr("cx") + "px")     
     // .style("top", d3.select(this).attr("cy") + "px")
@@ -62,33 +55,6 @@
     //.style("position", "absolute")
     //.style("z-index", "10")
     .style("visibility", "hidden");
-    //.datum(d)
-    //.style("background", "#000")
-/*
-    var mouseover = function(d) {
-    Tooltip
-      .style("opacity", 1)
-    d3.select(this)
-    .text("Hello world")
-
-      .style("stroke", "black")
-      .style("opacity", 1)
-  }
-  var mousemove = function(d) {
-    Tooltip
-      .html("Country:" + d["Country Name"].value)
-      .text(" hello world")
-      .style("left", (d3.mouse(this)[0]+70) + "px")
-      .style("top", (d3.mouse(this)[1]) + "px")
-  }
-  var mouseleave = function(d) {
-    Tooltip
-      .style("opacity", 0)
-    d3.select(this)
-      //.style("stroke", "none")
-      .style("opacity", 0.8)
-  }
-*/
 
 
       svg
@@ -101,23 +67,33 @@
         .attr('cy', function (d) { return ys(d["GDP per capita (current US$) - NY.GDP.PCAP.CD"]); })
         .attr('r', function (d) { return rs(d["Population, total - SP.POP.TOTL"]); })
         //.on("mouseover", mouseover)
-        .on("mouseover", function(event, d){return tooltip.style("visibility", "visible").text(d["Country Name"])
-        .style("left", event.pageX+"px")
-        .style("top", event.pageY+"px");})
+        .on("mouseover", function(event, d){
+                tooltip.style("visibility", "visible").text(d["Country Name"]);
+                tooltip.style("left", event.pageX+"px").style("top", event.pageY+"px");})
         .on("mousemove", function(){return tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");})
         .on("mouseout", function(){return tooltip.style("visibility", "hidden");});
-
-        //html(d["Country Name"]);
-       // .on("mousemove", mousemove)
-        //.on("mouseleave", mouseleave);
-        //.on("mouseover", mouseOver)
-        //.on("mouseout", mouseOut)
 
       var yAxis = d3.axisLeft(ys).ticks(10).tickFormat(d3.format("~s"));
       svg.append("g").call(yAxis);
 
       var xAxis = d3.axisBottom(xs).ticks(10).tickFormat(d3.format("~s"));
       svg.append("g").attr("transform", "translate(0," + height + ")").call(xAxis);
+
+
+              svg.append("text")
+            .attr("transform","rotate(-90)")
+            .attr("y", 0 - margin.left + 10)
+            .attr("x", 0 - (height / 2))
+            .attr("dy", "1em")
+            .style("text-anchor", "middle")
+            .text("GDP per capita (current US$)");
+
+            svg.append("text")
+              .attr("transform","translate(250,500")
+              .attr("x", 250)
+              .attr("y", 440)
+              .style("text-anchor", "middle")
+              .text("Adjusted savings: carbon dioxide damage (% of GNI)");
 
                     // create a tooltip
         var tooltip = d3.select("#chart")
@@ -128,46 +104,15 @@
             .style("visibility", "hidden")
             .text("I'm a circle!");
 
-     /*
-            d3.select("#circleTooltip")
-        .on("mouseover", function(){return tooltip.style("visibility", "visible");})
-        .on("mousemove", function(){return tooltip.style("top", (event.pageY-800)+"px").style("left",(event.pageX-800)+"px");})
-        .on("mouseout", function(){return tooltip.style("visibility", "hidden");});
-*/
       //Axis Labels
       
-    svg.append("text")
-            .attr("transform","rotate(-90)")
-            .attr("y", 0 - margin.left + 10)
-            .attr("x", 0 - (height / 2))
-            .attr("dy", "1em")
-            .style("text-anchor", "middle")
-            .text("GDP per capita (current US$)");
+   
 
-            svg.append("text")
-              //.attr("transform","translate(250,500")
-              .attr("x", 250)
-              .attr("y", 440)
-              .style("text-anchor", "middle")
-              .text("Adjusted savings: carbon dioxide damage (% of GNI)");
-
+  
     }
-    /*
-    function mouseOver(d) {
-        d3.select(this).append("text")
-        //.attr("transform", function(d) {return "rotate("+computeTextRotation(d) +")";})
-        .attr("x", function(d) { return y(d.y);})
-        .attr("dx", "6")
-        .attr("dy", ".35em")
-        .attr("class", "mylabel")
-        .text(function(d) {return d['Country']})
-    }
-
-    function mouseOut(d) {
-        d3.selectAll(".mylabel").remove()
-    }*/
+  
     function filtered(dataArr) {
-            return (dataArr['Year'] == '2018') && (dataArr['Continent']=='Europe')
+            return (dataArr['Year'] == '2018') && (dataArr['Continent']=='North America')
           } 
     loadData().catch(function (error) {
       console.log(error);
